objects/ASI_KOR_Wholesaler_AR_Credit_Detail__c.object
<CustomObject>
    <description>This custom object represents the Accounts Receivable Credit detail information of a Wholesaler</description>
    <fields>
        <fullName>ASI_KOR_SYS_AR_Credit_Key__c</fullName>
        <externalId>true</externalId>
        <label>SYS_AR_Credit_Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Company__c</fullName>
        <label>Company</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_DocType__c</fullName>
        <label>Document Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Invoice_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Invoice_Due_Days__c</fullName>
        <label>Due Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Issuer__c</fullName>
        <label>Issuer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Open_Amt__c</fullName>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Overdue_Days__c</fullName>
        <label>Overdue Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_Overdue_Flag__c</fullName>
        <label>Overdue Flag</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_DET_PNote_Number__c</fullName>
        <label>P-Note Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_AR_CRW_Info_WS_Link__c</fullName>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Wholesaler_AR_Credit_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AR Credit Info</label>
    <nameField>
        <label>Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Credit Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>